objects/Account_Splits__c/Account_Splits__c.object-meta.xml
<CustomObject>
    <description>Created per Pete Sanders request. Edit permissions for his team, read permissions for everyone else.</description>
    <label>Account Splits</label>
    <nameField>
        <displayFormat>SP{YYYY}{MM}-{0}</displayFormat>
        <label>Account Splits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>