objects/Account_Splits__c/fields/Account_and_Splits__c.field-meta.xml
<CustomField>
    <fullName>Account_and_Splits__c</fullName>
    <description>Account Splits as Child of Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Splits</relationshipLabel>
    <relationshipName>Account_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>