objects/Account_Splits__c/fields/Account_Owner_Diff__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Diff__c</fullName>
    <description>If Rep 1 is diff from Account Owner then TRUE, else FALSE</description>
    <formula>IF( Rep_1__r.Id  =  Account_and_Splits__r.OwnerId  ,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Rep 1 is diff from Account Owner then TRUE, else FALSE</inlineHelpText>
    <label>Account Owner Diff</label>
    <type>Checkbox</type>
</CustomField>