objects/Account_Splits__c/fields/Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>