objects/Account_Splits__c/fields/Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Splits1</relationshipName>
    <type>Lookup</type>
</CustomField>