objects/Account_Splits__c/fields/Rep_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rep_2_Percent__c</fullName>
    <label>Rep 2 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>