objects/Account_Splits__c/fields/RVP_1__c.field-meta.xml
<CustomField>
    <fullName>RVP_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Splits2</relationshipName>
    <type>Lookup</type>
</CustomField>