objects/Account_Splits__c/fields/RVP_2__c.field-meta.xml
<CustomField>
    <fullName>RVP_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Splits3</relationshipName>
    <type>Lookup</type>
</CustomField>