objects/Account_Splits__c/fields/RVP_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>RVP_2_Percent__c</fullName>
    <label>RVP 2 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>