objects/Account_Splits__c/fields/Split_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Split_Commentary__c</fullName>
    <description>Added Per Pete Sander&apos;s request to track additional information For example, if there is a 3rd rep or RVP.</description>
    <label>Split Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>