objects/Account_Splits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_and_Splits__c</columns>
    <columns>Active__c</columns>
    <columns>Primary_Rep__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>